tests/snapshots/test_kube_apps_portal/BASELINE-apps-portal.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: portal
  name: portal
---
apiVersion: v1
kind: Service
metadata:
  name: heliocloud-portal
  namespace: portal
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: portal
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: hub.jupyter.org/node-purpose
                operator: In
                values:
                - core
            weight: 100
      containers:
      - env:
        - name: APP_NAME
          value: auth
        - name: DEFAULT_SECURITY_GROUP_ID
          value: sg-0540b63f434c5dc94
        - name: DEFAULT_EC2_INSTANCE_PROFILE_ARN
          value: arn:aws:iam::000000000000:instance-profile/PortalEc2InstanceProfile
        - name: DEFAULT_EC2_SUBNET_ID
          value: subnet-subdomain-dentifier
        - name: IDENTITY_POOL_ID
          value: us-west-1:IDENTITY_POOL_ID
        - name: REGION
          value: us-west-1
        - name: SITE_URL
          value: https://portal.silly-domain.pizza
        - name: USER_POOL_CLIENT_SECRET
          value: the-cognito-client-secret
        - name: USER_POOL_CLIENT_ID
          value: cognito-client-identifier
        - name: USER_POOL_ID
          value: us-west-1_SOME_MADEUPKEY
        - name: FLASK_SECRET_KEY
          value: f000000000000000000000000000000000000000000000000000000000000000
        - name: LOGOUT_URL
          value: https://oauth.silly-domain.pizza/oauth2/sign_out
        image: public.ecr.aws/q3h7b4o8/heliocloud/helio-portal:2026.01.15
        name: science-console
        ports:
        - containerPort: 80
      serviceAccountName: portal-sa
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,X-Auth-Request-Preferred-Username,
      X-Auth-Request-Access-Token, authorization
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.silly-domain.pizza/oauth2/start?rd=https://$host
    nginx.ingress.kubernetes.io/auth-url: https://oauth.silly-domain.pizza/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
  name: portal-ingress
  namespace: portal
spec:
  rules:
  - host: portal.silly-domain.pizza
    http:
      paths:
      - backend:
          service:
            name: heliocloud-portal
            port:
              number: 80
        path: /
        pathType: Prefix
